[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/ButtonsAndOptions/ButtonModel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu/MenuPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/LabelBaseModel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/ReturnShortcut.tres" type="ShortCut" id=4]
[ext_resource path="res://Menu/DisplayConfigMenu/DisplayConfigMenu.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="DisplayConfigMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="CenterContainer"]
margin_left = 318.0
margin_top = 202.0
margin_right = 706.0
margin_bottom = 374.0

[node name="MenuPanel" parent="CenterContainer/Margin" instance=ExtResource( 2 )]
margin_right = 388.0
margin_bottom = 172.0

[node name="Margin" type="MarginContainer" parent="CenterContainer/Margin"]
margin_right = 388.0
margin_bottom = 172.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="Menu" type="VBoxContainer" parent="CenterContainer/Margin/Margin"]
margin_left = 12.0
margin_top = 12.0
margin_right = 376.0
margin_bottom = 160.0
alignment = 1

[node name="LabelBaseModel" parent="CenterContainer/Margin/Margin/Menu" instance=ExtResource( 3 )]
margin_right = 364.0
margin_bottom = 16.0
text = "Display"
align = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Margin/Margin/Menu"]
margin_top = 20.0
margin_right = 364.0
margin_bottom = 58.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 38

[node name="Options" type="VBoxContainer" parent="CenterContainer/Margin/Margin/Menu"]
margin_top = 62.0
margin_right = 364.0
margin_bottom = 110.0

[node name="Windowed" type="HBoxContainer" parent="CenterContainer/Margin/Margin/Menu/Options"]
margin_right = 364.0
margin_bottom = 22.0
custom_constants/separation = 48

[node name="LabelBaseModel2" parent="CenterContainer/Margin/Margin/Menu/Options/Windowed" instance=ExtResource( 3 )]
margin_top = 3.0
margin_right = 128.0
margin_bottom = 19.0
text = "Windowed"

[node name="ButtonModel" parent="CenterContainer/Margin/Margin/Menu/Options/Windowed" instance=ExtResource( 1 )]
margin_left = 176.0
margin_right = 188.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../../../Return")
focus_neighbour_bottom = NodePath("../../FullScreen/ButtonModel")

[node name="LabelBaseModel" parent="CenterContainer/Margin/Margin/Menu/Options/Windowed" instance=ExtResource( 3 )]
margin_left = 236.0
margin_top = 3.0
margin_right = 364.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.956863, 0.956863, 0.894118, 1 )
text = "1024x576"
align = 2

[node name="FullScreen" type="HBoxContainer" parent="CenterContainer/Margin/Margin/Menu/Options"]
margin_top = 26.0
margin_right = 364.0
margin_bottom = 48.0

[node name="LabelBaseModel" parent="CenterContainer/Margin/Margin/Menu/Options/FullScreen" instance=ExtResource( 3 )]
margin_top = 3.0
margin_right = 176.0
margin_bottom = 19.0
text = "Full Screen"

[node name="ButtonModel" parent="CenterContainer/Margin/Margin/Menu/Options/FullScreen" instance=ExtResource( 1 )]
margin_left = 180.0
margin_right = 192.0
margin_bottom = 22.0
focus_neighbour_top = NodePath("../../Windowed/ButtonModel")
focus_neighbour_bottom = NodePath("../../../Return")

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/Margin/Margin/Menu"]
margin_top = 114.0
margin_right = 364.0
margin_bottom = 122.0
custom_styles/separator = SubResource( 2 )
custom_constants/separation = 8

[node name="Return" parent="CenterContainer/Margin/Margin/Menu" instance=ExtResource( 1 )]
margin_left = 128.0
margin_top = 126.0
margin_right = 236.0
margin_bottom = 148.0
focus_neighbour_top = NodePath("../Options/FullScreen/ButtonModel")
focus_neighbour_bottom = NodePath("../Options/Windowed/ButtonModel")
shortcut = ExtResource( 4 )
text = "Return"
[connection signal="pressed" from="CenterContainer/Margin/Margin/Menu/Options/Windowed/ButtonModel" to="." method="_on_Windowed_pressed"]
[connection signal="pressed" from="CenterContainer/Margin/Margin/Menu/Options/FullScreen/ButtonModel" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="CenterContainer/Margin/Margin/Menu/Return" to="." method="_on_Return_pressed"]
